elasticsearch-client.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-client
  labels:
    component: elasticsearch
    role: client
spec:
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        role: client
    spec:
      containers:

      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "-p", "8081",
          "-a", "127.0.0.1:9200",
          "-s", "suggester.gcpdemo.xyz",
          "-v", "2017-10-28r1",
          "-z", "healthz",
        ]
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8081
        ports:
          - containerPort: 8081
      - name: elasticsearch-client
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: quay.io/pires/docker-elasticsearch-kubernetes:5.6.3
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 9300
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: 9200
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: elasticsearchclientdata
          mountPath: /data/data
      volumes:
        - name: elasticsearchclientdata
        persistentVolumeClaim:
          claimName: elasticsearchclientdata
