elasticsearch-data.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-data
  labels:
    component: elasticsearch
    role: data
spec:
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        role: data
    spec:
      containers:
      - name: elasticsearch-data
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: quay.io/pires/docker-elasticsearch-kubernetes:5.6.3
        imagePullPolicy: Always
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 9300
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: elasticsearchdatadata
          mountPath: /data/data
      volumes:
      - name: elasticsearchdatadata
        persistentVolumeClaim:
          claimName: elasticsearchdatadata
