elasticsearch-master.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-master
  labels:
    component: elasticsearch
    role: master
spec:
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        role: master
    spec:
      containers:
      - name: elasticsearch-master
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: quay.io/pires/docker-elasticsearch-kubernetes:5.6.3
        imagePullPolicy: Always
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 9300
        volumeMounts:
        - name: elasticsearchmasterdata
          mountPath: /data/data
      volumes:
      - name: elasticsearchmasterdata
        persistentVolumeClaim:
          claimName: elasticsearchmasterdata
