elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
    role: client
spec:
   type: NodePort
   selector:
    component: elasticsearch
    role: client
   ports:
   - name: http
     port: 80
     targetPort: 8081
     nodePort: 30036
     protocol: TCP
